--- a/index.html
+++ b/index.html
@@ -64,11 +64,52 @@
 
 <main>
 
-    <section class="carrosel">
 
-      
+  <div class="slider">
+    
+  <div class="slides"> 
 
-    </section>
+    <input type="radio" name="radio-btn" id="radio1">
+    <input type="radio" name="radio-btn" id="radio2">
+    <input type="radio" name="radio-btn" id="radio3">
+    <input type="radio" name="radio-btn" id="radio4">
+
+  <div class="slide first">
+    <img src="assets/images/havana-dentro.jpg" alt="foto de dentro da Gelateria Havana com mesas e cadeiras na parte interna com vista de dentro para fora" />
+  </div>
+
+  <div class="slide">
+    <img src="assets/images/balcao-gelateria-.jpg" alt="Vista do Balção de dentro da visão que o cliente entra na Gelateria" />
+  </div>
+
+  <div class="slide">
+    <img src="assets/images/balcao-havana.jpg" alt="imagem3" />
+  </div>
+
+  <div class="slide"> 
+    <img src="assets/images/havana-dentro-balcao-e-cadeiras.jpg" alt="imagem4" />
+  </div>
+
+<div class="navigation-auto">
+  <div class="auto-btn1"></div>
+  <div class="auto-btn2"></div>
+  <div class="auto-btn3"></div>
+  <div class="auto-btn4"></div>
+</div>
+
+
+<div class="manual-navigation">
+  <label for="radio1" class="manual-btn"></label>
+  <label for="radio2" class="manual-btn"></label>
+  <label for="radio3" class="manual-btn"></label>
+  <label for="radio4" class="manual-btn"></label>
+</div>
+
+</div>
+
+</div>
+ 
+
 
 <section class="texto-apresentacao">
     <h1>Bem-vindo ao Self-Service da Gelateria Havana!</h1>
@@ -258,5 +299,6 @@
     </section>
     </div>    
 </footer>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
