criando galeria dos produtos

--- a/assets/paginas/outros.html
+++ b/assets/paginas/outros.html
@@ -7,6 +7,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="../css/styles-pags.css">
     <title>Gelateria Havana</title>
 </head>
 <body>
@@ -44,7 +45,7 @@
                 <li><a href="#">Início</a></li>
                 <li>
                   <div class="dropdown">
-                    <a href="#">Gelatos</a>
+                    <a href="#">Outros</a>
                     <button class="dropbtn" id="btndrop">
                       <i class="fa fa-caret-down"></i>
                     </button>
@@ -62,8 +63,41 @@
     </header>
 <!-- ------------------ -->
 
-<main>
-  
+<main class="container-produtos">
+
+  <h1 class="titulo-produtos">Outros</h1>
+
+  <section class="produtos">
+
+        <figure class="produtos-img_fundo-pronto">
+          <img src="../images/MilkShake.JPEG" alt="Descrição da foto 1">
+          <figcaption>Abacaxi</figcaption>
+    
+        </figure>
+
+        <figure class="produtos-img_fundo-pronto">
+          <img src="../images/PetitGAteu.JPEG" alt="Descrição da foto 1">
+          <figcaption>Abacaxi ao Vinho</figcaption>
+        </figure>
+
+        <figure class="produtos-img_fundo-pronto">
+          <img src="../images/SorvetePeso.JPEG" alt="Descrição da foto 1">
+          <figcaption>Açai</figcaption>
+        </figure>
+    
+        <figure class="produtos-img_fundo-pronto">
+          <img src="../images/Banana_Split.JPEG" alt="Descrição da foto 1">
+          <figcaption>Açai com Nutella</figcaption>
+        </figure>
+
+        <figure class="produtos-img_fundo-pronto">
+          <img src="../images/Cascao.JPEG" alt="Descrição da foto 1">
+          <figcaption>Ameixa</figcaption>
+        </figure>
+
+
+  </section>
+
 </main>
 
   
