--- a/assets/paginas/gelatos.html
+++ b/assets/paginas/gelatos.html
@@ -7,12 +7,13 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="../css/styles-pags.css">
     <title>Gelateria Havana</title>
 </head>
 <body>
    <header class="navbar">
   <figure class="logo">
-    <img src="assets/images/logo-havana.png" alt="Logo Gelateria Havana">
+    <img src="../images/logo-havana.png" alt="Logo Gelateria Havana">
   </figure>
 
   <nav class="nav-links">
@@ -64,19 +65,62 @@
 
 <main class="container-produtos">
 
-  <h1 class="produtos">Gelatos</h1>
+  <h1 class="titulo-produtos">Gelatos</h1>
 
-  <section class="images-produtos">
+  <section class="produtos">
 
-    <section class="galeria-produtos">
-      <img src="../images/sorvete-fake.jpg" alt="sorvete de ... ">
-      <img src="../images/sorvete-fake.jpg" alt="sorvete de ... ">
-      <img src="../images/sorvete-fake.jpg" alt="sorvete de ... ">
-      <img src="../images/sorvete-fake.jpg" alt="sorvete de ... ">
-      <img src="../images/sorvete-fake.jpg" alt="sorvete de ... ">
-      <img src="../images/sorvete-fake.jpg" alt="sorvete de ... ">
-      <img src="../images/sorvete-fake.jpg" alt="sorvete de ... ">
-   </section>
+        <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Abacaxi.jpg" alt="Descrição da foto 1">
+          <figcaption>Abacaxi</figcaption>
+          <div class="tracinho"> </div>
+        </figure>
+
+ 
+        <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_AbacaxiVinho.jpg" alt="Descrição da foto 1">
+          <figcaption>Abacaxi ao Vinho</figcaption>
+        </figure>
+
+        <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_acai.jpg" alt="Descrição da foto 1">
+          <figcaption>Açai</figcaption>
+        </figure>
+    
+        <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_AcaiNutella.jpg" alt="Descrição da foto 1">
+          <figcaption>Açai com Nutella</figcaption>
+        </figure>
+
+        <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Ameixa.jpg" alt="Descrição da foto 1">
+          <figcaption>Ameixa</figcaption>
+        </figure>
+
+        <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Amora.jpg" alt="Descrição da foto 1">
+          <figcaption>Amora</figcaption>
+        </figure>
+
+        <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Banana.jpg" alt="Descrição da foto 1">
+          <figcaption>Banana</figcaption>
+        </figure>
+
+        <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Bombom.jpg" alt="Descrição da foto 1">
+          <figcaption>Bombom</figcaption>
+        </figure>
+
+        <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_CafeNinho.jpg" alt="Descrição da foto 1">
+          <figcaption>CaféNinho</figcaption>
+        </figure>
+
+        <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Caipirinha.jpg" alt="Descrição da foto 1">
+          <figcaption>Caipirinha</figcaption>
+        </figure>
+
   </section>
 
 </main>
