--- a/assets/paginas/picoles.html
+++ b/assets/paginas/picoles.html
@@ -7,6 +7,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="../css/styles-pags.css">
     <title>Gelateria Havana</title>
 </head>
 <body>
@@ -62,10 +63,42 @@
     </header>
 <!-- ------------------ -->
 
-<main>
-  
-</main>
+<main class="container-produtos">
 
+  <h1 class="titulo-produtos">Picolés</h1>
+
+  <section class="produtos">
+
+        <figure class="produtos-img_fundo-pronto">
+          <img src="../images/Picole_Acai.JPEG" alt="Descrição da foto 1">
+          <figcaption>Abacaxi</figcaption>
+    
+        </figure>
+
+        <figure class="produtos-img_fundo-pronto">
+          <img src="../images/Picole_Amendoin.JPEG" alt="Descrição da foto 1">
+          <figcaption>Abacaxi ao Vinho</figcaption>
+        </figure>
+
+        <figure class="produtos-img_fundo-pronto">
+          <img src="../images/Picole_Chcococo.JPEG" alt="Descrição da foto 1">
+          <figcaption>Açai</figcaption>
+        </figure>
+    
+        <figure class="produtos-img_fundo-pronto">
+          <img src="../images/Picole_Chocolate.JPEG" alt="Descrição da foto 1">
+          <figcaption>Açai com Nutella</figcaption>
+        </figure>
+
+        <figure class="produtos-img_fundo-pronto">
+          <img src="../images/Picole_coco.JPEG" alt="Descrição da foto 1">
+          <figcaption>Ameixa</figcaption>
+        </figure>
+
+
+  </section>
+
+</main>
   
 <!------------------------------>
 
