--- a/index.html
+++ b/index.html
@@ -299,6 +299,5 @@
     </section>
     </div>    
 </footer>
-<script src="assets/js/script.js"></script>
+<script src="assets/JavaScript/script.js"></script>
 </body>
-</html>
