galeria de gelatos

--- a/assets/paginas/gelatos.html
+++ b/assets/paginas/gelatos.html
@@ -18,14 +18,14 @@
 
   <nav class="nav-links">
     <ul>
-      <li><a href="index.html">Início</a></li>
+      <li><a href="../../index.html">Início</a></li>
         <li>
           <div class="dropdown">
-            <a href="gelatos.html">Gelatos</a>
             <button class="dropbtn" id="btndrop">
-              <i class="fa fa-caret-down"></i>
+              Cardápio <i class="fa fa-caret-down"></i>
             </button>
             <nav id="myDropdown" class="dropdown-content">
+              <a href="gelatos.html">Gelatos</a>
               <a href="picoles.html">Picolés</a>
               <a href="paletas.html">Paletas</a>
               <a href="outros.html">Outros</a>
@@ -120,6 +120,83 @@
           <img src="../images/Gelato_Caipirinha.jpg" alt="Descrição da foto 1">
           <figcaption>Caipirinha</figcaption>
         </figure>
+
+        <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_CarameloSalgadoBrownie.jpg" alt="Descrição da foto 1">
+          <figcaption>Caramelo Salgado com Brownie</figcaption>
+        </figure>
+
+        <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Cereja.jpg" alt="Descrição da foto 1">
+          <figcaption>Cereja</figcaption>
+        </figure>
+
+        <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Chiclete.jpg" alt="Descrição da foto 1">
+          <figcaption>Chiclete</figcaption>
+        </figure>
+
+        <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_chocolate.jpg" alt="Descrição da foto 1">
+          <figcaption>Chocolate</figcaption>
+        </figure>
+
+        <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Chocolate70Nibscacau.jpg" alt="Descrição da foto 1">
+          <figcaption>Chocolate 70% Nibscacau</figcaption>
+        </figure>
+
+        <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_ChocolateGengibre.jpg" alt="Descrição da foto 1">
+          <figcaption>Chocolate e Gengibre</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Chocomenta.jpg" alt="Descrição da foto 1">
+          <figcaption>Chocomenta</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Coco.JPEG" alt="Descrição da foto 1">
+          <figcaption>Coco</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Cocoqueimado.jpg" alt="Descrição da foto 1">
+          <figcaption>Coco Queimado</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Creme.jpg" alt="Descrição da foto 1">
+          <figcaption>Creme</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_CremeCeu.jpg" alt="Descrição da foto 1">
+          <figcaption>Creme Céu</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Cupuacu.jpg" alt="Descrição da foto 1">
+          <figcaption>Cupuaçu</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Delirio.jpg" alt="Descrição da foto 1">
+          <figcaption>Delírio</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_DoceLeite.jpg" alt="Descrição da foto 1">
+          <figcaption>Doce de Leite</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Ferreiro.jpg" alt="Descrição da foto 1">
+          <figcaption>Ferreiro</figcaption>
+        </figure>
+
+ 
 
   </section>
 
