--- a/assets/paginas/paletas.html
+++ b/assets/paginas/paletas.html
@@ -20,14 +20,15 @@
         <li><a href="../../index.html">Início</a></li>
         <li>
           <div class="dropdown">
-            <a href="#">Gelatos</a>
+           
             <button class="dropbtn" id="btndrop">
-              <i class="fa fa-caret-down"></i>
+              Cardápio <i class="fa fa-caret-down"></i>
             </button>
             <nav id="myDropdown" class="dropdown-content">
-              <a href="#">Picolés</a>
-              <a href="#">Paletas</a>
-              <a href="#">Outros</a>
+               <a href="gelatos.html">Gelatos</a>
+              <a href="picoles.html">Picolés</a>
+              <a href="paletas.html">Paletas</a>
+              <a href="outros.html">Outros</a>
             </nav>
           </div> 
         </li>
