--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <li><a href="index.html">Início</a></li>
         <li>
           <div class="dropdown">
-            <a href="assets/paginas/gelatos.html">Gelatos</a>
             <button class="dropbtn" id="btndrop">
-              <i class="fa fa-caret-down"></i>
+             Cardápio <i class="fa fa-caret-down"></i>
             </button>
             <nav id="myDropdown" class="dropdown-content">
+              <a href="assets/paginas/gelatos.html">Gelatos</a>
               <a href="assets/paginas/picoles.html">Picolés</a>
               <a href="assets/paginas/paletas.html">Paletas</a>
               <a href="assets/paginas/outros.html">Outros</a>
