--- a/assets/paginas/outros.html
+++ b/assets/paginas/outros.html
@@ -21,14 +21,15 @@
         <li><a href="../../index.html">Início</a></li>
         <li>
           <div class="dropdown">
-            <a href="outros.html">Outros</a>
+          
             <button class="dropbtn" id="btndrop">
-              <i class="fa fa-caret-down"></i>
+              Cardápio <i class="fa fa-caret-down"></i>
             </button>
             <nav id="myDropdown" class="dropdown-content">
                 <a href="gelatos.html">Gelatos</a>
                 <a href="picoles.html">Picolés</a>
                 <a href="paletas.html">Paletas</a>
+                  <a href="outros.html">Outros</a>
             </nav>
           </div> 
         </li>
