--- a/assets/paginas/picoles.html
+++ b/assets/paginas/picoles.html
@@ -21,12 +21,13 @@
         <li><a href="../../index.html">Início</a></li>
         <li>
           <div class="dropdown">
-            <a href="picoles.html">Picolés</a>
+           
             <button class="dropbtn" id="btndrop">
-              <i class="fa fa-caret-down"></i>
+              Cardápio <i class="fa fa-caret-down"></i>
             </button>
             <nav id="myDropdown" class="dropdown-content">
               <a href="gelatos.html">Gelatos</a>
+               <a href="picoles.html">Picolés</a>
               <a href="paletas.html">Paletas</a>
               <a href="outros.html">Outros</a>
             </nav>
