ajustes na descrição da galeria de produtos

--- a/assets/paginas/gelatos.html
+++ b/assets/paginas/gelatos.html
@@ -71,14 +71,23 @@
 
         <figure class="produtos-img_fundo">
           <img src="../images/Gelato_Abacaxi.jpg" alt="Descrição da foto 1">
-          <figcaption>Abacaxi</figcaption>
-          <div class="tracinho"> </div>
+         
+          <div class="textos-produto">
+             <figcaption>Abacaxi</figcaption>
+             <div class="tracinho"> </div>
+             <p class="descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
         </figure>
 
  
         <figure class="produtos-img_fundo">
           <img src="../images/Gelato_AbacaxiVinho.jpg" alt="Descrição da foto 1">
-          <figcaption>Abacaxi ao Vinho</figcaption>
+          
+           <div class="textos-produto">
+             <figcaption>Abacaxi ao Vinho</figcaption>
+             <div class="tracinho"> </div>
+             <p class="descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
         </figure>
 
         <figure class="produtos-img_fundo">
@@ -196,7 +205,136 @@
           <figcaption>Ferreiro</figcaption>
         </figure>
 
- 
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Flocos.JPEG" alt="Descrição da foto 1">
+          <figcaption>Flocos</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Jabuticaba.jpg" alt="Descrição da foto 1">
+          <figcaption>Jabuticaba</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Jaca.jpg" alt="Descrição da foto 1">
+          <figcaption>Jaca</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_LakaCookies.jpg" alt="Descrição da foto 1">
+          <figcaption>LakaCookies</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Leitecondensado.jpg" alt="Descrição da foto 1">
+          <figcaption>Leite Condensado</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Limao.jpg" alt="Descrição da foto 1">
+          <figcaption>Limão</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Manga.jpg" alt="Descrição da foto 1">
+          <figcaption>Manga</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Maracuja.jpg" alt="Descrição da foto 1">
+          <figcaption>Maracujá</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Milho.jpg" alt="Descrição da foto 1">
+          <figcaption>Milho</figcaption>
+        </figure>
+
+          <figure class="produtos-img_fundo">
+          <img src="../images/Gelatos_Morango.jpg" alt="Descrição da foto 1">
+          <figcaption>Morango</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Moussemaracuja.jpg" alt="Descrição da foto 1">
+          <figcaption>Mousse Maracujá</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_NinhoNutella.JPEG" alt="Descrição da foto 1">
+          <figcaption>NinhoNutella</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Pacoca.jpg" alt="Descrição da foto 1">
+          <figcaption>Paçoca</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Papaia.JPEG" alt="Descrição da foto 1">
+          <figcaption>Papaia</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_PassasRum.jpg" alt="Descrição da foto 1">
+          <figcaption>Passas ao Rum</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Pinacolada.jpg" alt="Descrição da foto 1">
+          <figcaption>Pinacolada</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Pistache.jpg" alt="Descrição da foto 1">
+          <figcaption>Pistache</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Pitaya.jpg" alt="Descrição da foto 1">
+          <figcaption>Pitaya</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Rafaello.jpg" alt="Descrição da foto 1">
+          <figcaption>Rafaello</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Sensacao.jpg" alt="Descrição da foto 1">
+          <figcaption>Sensação</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Tapioca.jpg" alt="Descrição da foto 1">
+          <figcaption>Tapioca</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Tortalimao.JPEG" alt="Descrição da foto 1">
+          <figcaption>Torta de Limão</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Trufa.jpg" alt="Descrição da foto 1">
+          <figcaption>Trufa</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_Uva.jpg" alt="Descrição da foto 1">
+          <figcaption>Uva</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gelato_YogurteAmarena.jpg" alt="Descrição da foto 1">
+          <figcaption>Yogurte Amarena</figcaption>
+        </figure>
+
+         <figure class="produtos-img_fundo">
+          <img src="../images/Gleato_YogurteDamasconozes.JPEG" alt="Descrição da foto 1">
+          <figcaption>Yogurte Damasco e Nozes</figcaption>
+        </figure>
+
 
   </section>
 
