alterações na galeria e arrumando responsividade

--- a/assets/paginas/paletas.html
+++ b/assets/paginas/paletas.html
@@ -12,7 +12,7 @@
 <body>
    <header class="navbar">
   <figure class="logo">
-    <img src="assets/images/logo-havana.png" alt="Logo Gelateria Havana">
+    <img src="../images/logo-havana.png" alt="Logo Gelateria Havana">
   </figure>
 
   <nav class="nav-links">
@@ -73,49 +73,49 @@
 
 
 <footer>
-    <div class="footer-container">
-    <div class="footer-logo">
-      <img src="assets/images/logo-havana.png" alt="Logo Gelateria Havana">
-    </div>
-    
-    <div class="footer-section">
-      <ul>
-        <li><a href="#">Página Inicial</a></li>
-        <li><a href="#">Gelatos e mais</a></li>
-        <li><a href="#">Sobre Nós</a></li>
-        <li><a href="#">Contato</a></li>
-        <li><a href="#">Trabalhe Conosco</a></li>
-      </ul>
-    </div>
+  <div class="footer-container">
+  <div class="footer-logo">
+    <img src="../images/logo-havana.png" alt="Logo Gelateria Havana">
+  </div>
+  
+  <div class="footer-section">
+    <ul>
+      <li><a href="#">Página Inicial</a></li>
+      <li><a href="#">Gelatos e mais</a></li>
+      <li><a href="#">Sobre Nós</a></li>
+      <li><a href="#">Contato</a></li>
+      <li><a href="#">Trabalhe Conosco</a></li>
+    </ul>
+  </div>
 
-    <div class="footer-section">
-      <ul class="#">
-        <li><a href="#">Produtos Artesanais</a></li>
-        <li><a href="#">Gelatos</a></li>
-        <li><a href="#">Picolés</a></li>
-        <li><a href="#">Diet</a></li>
-        <li><a href="#">Sobremesa</a></li>
-        <li><a href="#">Para Viagem</a></li>
-      </ul>
-    </div>
+  <div class="footer-section">
+    <ul class="#">
+      <li><a href="#">Produtos Artesanais</a></li>
+      <li><a href="#">Gelatos</a></li>
+      <li><a href="#">Picolés</a></li>
+      <li><a href="#">Diet</a></li>
+      <li><a href="#">Sobremesa</a></li>
+      <li><a href="#">Para Viagem</a></li>
+    </ul>
+  </div>
 
-    <section class="#">
-      <h4>Horário:</h4>
-      <p><em>Segunda a Domingo<br>das 13h às 23h</em></p>
-      <p class="small-text"><em>(sujeito a alteração)</em><br><em>Verifique nossas Redes Sociais</em></p>
-    </section>
+  <section class="#">
+    <h4>Horário:</h4>
+    <p><em>Segunda a Domingo<br>das 13h às 23h</em></p>
+    <p class="small-text"><em>(sujeito a alteração)</em><br><em>Verifique nossas Redes Sociais</em></p>
+  </section>
 
-    <section class="footer-location">
-      <h4>Localização:</h4>
-      <p><a href="https://maps.app.goo.gl/PGwLfbmZigVDXxCN8" target="_blank" alt="Clique para acessar o google maps da Gelateria">Avenida Pres. Castelo Branco, 6920  Cidade Ocian, Praia Grande SP</p></a>
-    </section>
+  <section class="footer-location">
+    <h4>Localização:</h4>
+    <p><a href="https://maps.app.goo.gl/PGwLfbmZigVDXxCN8" target="_blank" alt="Clique para acessar o google maps da Gelateria">Avenida Pres. Castelo Branco, 6920  Cidade Ocian, Praia Grande SP</p></a>
+  </section>
 
-    <section class="footer-social">
-      <a href="https://www.instagram.com/gelateriahavana/" target="_blank"></a><img src="assets/images/icone-instagram.png" alt="clique para acessar nosso Instagram em uma nova aba">
-      <a href="mailto:contato@seudominio.com"></a><img src="assets/images/icone-email.png" alt="clique para nos enviar um e-mail"></a>
-      <a href="https://wa.me/5513999999999"><img src="assets/images/icone-tel.png" alt="Clique para saber nosso whatsapp"></a>
-    </section>
-    </div>    
+  <section class="footer-social">
+    <a href="https://www.instagram.com/gelateriahavana/" target="_blank"></a><img src="../images/icone-instagram.png" alt="clique para acessar nosso Instagram em uma nova aba">
+    <a href="mailto:contato@seudominio.com"></a><img src="../images/icone-email.png" alt="clique para nos enviar um e-mail"></a>
+    <a href="https://wa.me/5513999999999"><img src="../images/icone-tel.png" alt="Clique para saber nosso whatsapp"></a>
+  </section>
+  </div>    
 </footer>
 
 <script src="../JavaScript/script.js"></script>
