--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
   </div>
 
     <!-- Botões de navegação -->
-  <button class="prev">&#10094;</button>
-  <button class="next">&#10095;</button>
+  <button class="prev"> <i class="fa-solid fa-chevron-left"></i></button>
+  <button class="next"> <i class="fa-solid fa-chevron-right"></i> </button>
 </div>
 
 
