--- a/assets/paginas/gelatos.html
+++ b/assets/paginas/gelatos.html
@@ -590,7 +590,7 @@
 <footer>
     <div class="footer-container">
     <div class="footer-logo">
-      <img src="assets/images/logo-havana.png" alt="Logo Gelateria Havana">
+      <img src="../images/logo-havana.png" alt="Logo Gelateria Havana">
     </div>
     
     <div class="footer-section">
@@ -626,9 +626,9 @@
     </section>
 
     <section class="footer-social">
-      <a href="https://www.instagram.com/gelateriahavana/" target="_blank"></a><img src="assets/images/icone-instagram.png" alt="clique para acessar nosso Instagram em uma nova aba">
-      <a href="mailto:contato@seudominio.com"></a><img src="assets/images/icone-email.png" alt="clique para nos enviar um e-mail"></a>
-      <a href="https://wa.me/5513999999999"><img src="assets/images/icone-tel.png" alt="Clique para saber nosso whatsapp"></a>
+      <a href="https://www.instagram.com/gelateriahavana/" target="_blank"></a><img src="../images/icone-instagram.png" alt="clique para acessar nosso Instagram em uma nova aba">
+      <a href="mailto:contato@seudominio.com"></a><img src="../images/icone-email.png" alt="clique para nos enviar um e-mail"></a>
+      <a href="https://wa.me/5513999999999"><img src="../images/icone-tel.png" alt="Clique para saber nosso whatsapp"></a>
     </section>
     </div>    
 </footer>
