--- a/assets/paginas/picoles.html
+++ b/assets/paginas/picoles.html
@@ -34,7 +34,7 @@
           </div>
         </li>
         <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#">Contato</a></li>
+        <li><a href="">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -64,8 +64,8 @@
             </nav>
           </div>
         </li>
-        <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#">Contato</a></li>
+        <li><a href="../../index.html#sobre">Sobre</a></li>
+        <li><a href="/assets/paginas/contato.html">Contato</a></li>
       </ul>
     </div>
   </nav>
@@ -267,10 +267,16 @@
     <p><a href="https://maps.app.goo.gl/PGwLfbmZigVDXxCN8" target="_blank" alt="Clique para acessar o google maps da Gelateria">Avenida Pres. Castelo Branco, 6920  Cidade Ocian, Praia Grande SP</p></a>
   </section>
 
-  <section class="footer-social">
-    <a href="https://www.instagram.com/gelateriahavana/" target="_blank"></a><img src="../images/icone-instagram.png" alt="clique para acessar nosso Instagram em uma nova aba">
-    <a href="mailto:contato@seudominio.com"></a><img src="../images/icone-email.png" alt="clique para nos enviar um e-mail"></a>
-    <a href="https://wa.me/5513999999999"><img src="../images/icone-tel.png" alt="Clique para saber nosso whatsapp"></a>
+ <section class="footer-social">
+    <a href="https://www.instagram.com/gelateriahavana/" target="_blank">
+      <img src="../images/icone-instagram.png" alt="clique para acessar nosso Instagram em uma nova aba">
+    </a>
+    <a href="mailto:Contato@gelateriahavana.com.br">
+      <img src="../images/icone-email.png" alt="clique para nos enviar um e-mail">
+    </a>
+    <a href="https://wa.me/+5513981739220">
+      <img src="../images/icone-tel.png" alt="Clique para saber nosso whatsapp">
+    </a>
   </section>
   </div>    
 </footer>
