--- a/assets/paginas/picoles.html
+++ b/assets/paginas/picoles.html
@@ -230,31 +230,31 @@
 
 
 <footer>
-  <div class="footer-container">
-  <div class="footer-logo">
-    <img src="../images/logo-havana.png" alt="Logo Gelateria Havana">
-  </div>
-  
-  <div class="footer-section">
-    <ul>
-      <li><a href="#">Página Inicial</a></li>
-      <li><a href="#">Gelatos e mais</a></li>
-      <li><a href="#">Sobre Nós</a></li>
-      <li><a href="#">Contato</a></li>
-      <li><a href="#">Trabalhe Conosco</a></li>
-    </ul>
-  </div>
+    <div class="footer-container">
+    <div class="footer-logo">
+      <img src="assets/images/logo-havana.png" alt="Logo Gelateria Havana">
+    </div>
+    
+    <div class="footer-section">
+      <ul>
+        <li><a href="/index.html">Página Inicial</a></li>
+        <li><a href="/assets/paginas/gelatos.html">Gelatos e mais</a></li>
+        <li><a href="/index.html#sobre">Sobre Nós</a></li>
+        <li><a href="/assets/paginas/contato.html">Contato</a></li>
+        <li><a href="/assets/paginas/contato.html">Trabalhe Conosco</a></li>
+      </ul>
+    </div>
 
-  <div class="footer-section">
-    <ul class="#">
-      <li><a href="#">Produtos Artesanais</a></li>
-      <li><a href="#">Gelatos</a></li>
-      <li><a href="#">Picolés</a></li>
-      <li><a href="#">Diet</a></li>
-      <li><a href="#">Sobremesa</a></li>
-      <li><a href="#">Para Viagem</a></li>
-    </ul>
-  </div>
+    <div class="footer-section">
+      <ul class="#">
+        <li><a href="">Produtos Artesanais</a></li>
+        <li><a href="/assets/paginas/gelatos.html">Gelatos</a></li>
+        <li><a href="/assets/paginas/picoles.html">Picolés</a></li>
+        <li><a href="">Diet</a></li>
+        <li><a href="#">Sobremesa</a></li>
+        <li><a href="#">Para Viagem</a></li>
+      </ul>
+    </div>
 
   <section class="#">
     <h4>Horário:</h4>
