--- a/index.html
+++ b/index.html
@@ -286,20 +286,20 @@
     
     <div class="footer-section">
       <ul>
-        <li><a href="#">Página Inicial</a></li>
-        <li><a href="#">Gelatos e mais</a></li>
-        <li><a href="#">Sobre Nós</a></li>
-        <li><a href="#">Contato</a></li>
-        <li><a href="#">Trabalhe Conosco</a></li>
+        <li><a href="/index.html">Página Inicial</a></li>
+        <li><a href="/assets/paginas/gelatos.html">Gelatos e mais</a></li>
+        <li><a href="/index.html#sobre">Sobre Nós</a></li>
+        <li><a href="/assets/paginas/contato.html">Contato</a></li>
+        <li><a href="/assets/paginas/contato.html">Trabalhe Conosco</a></li>
       </ul>
     </div>
 
     <div class="footer-section">
       <ul class="#">
-        <li><a href="#">Produtos Artesanais</a></li>
-        <li><a href="#">Gelatos</a></li>
-        <li><a href="#">Picolés</a></li>
-        <li><a href="#">Diet</a></li>
+        <li><a href="">Produtos Artesanais</a></li>
+        <li><a href="/assets/paginas/gelatos.html">Gelatos</a></li>
+        <li><a href="/assets/paginas/picoles.html">Picolés</a></li>
+        <li><a href="">Diet</a></li>
         <li><a href="#">Sobremesa</a></li>
         <li><a href="#">Para Viagem</a></li>
       </ul>
@@ -317,13 +317,13 @@
 
     <section class="footer-social">
     <a href="https://www.instagram.com/gelateriahavana/" target="_blank">
-      <img src="../images/icone-instagram.png" alt="clique para acessar nosso Instagram em uma nova aba">
+      <img src="/assets/images/icone-instagram.png" alt="clique para acessar nosso Instagram em uma nova aba">
     </a>
     <a href="mailto:Contato@gelateriahavana.com.br">
-      <img src="../images/icone-email.png" alt="clique para nos enviar um e-mail">
+      <img src="/assets/images/icone-email.png" alt="clique para nos enviar um e-mail">
     </a>
     <a href="https://wa.me/+5513981739220">
-      <img src="../images/icone-tel.png" alt="Clique para saber nosso whatsapp">
+      <img src="/assets/images/icone-tel.png" alt="Clique para saber nosso whatsapp">
     </a>
   </section>
     </div>    
