--- a/assets/paginas/contato.html
+++ b/assets/paginas/contato.html
@@ -32,11 +32,43 @@
             </nav>
           </div>
         </li>
-        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="/index.html#sobre">Sobre</a></li>
         <li><a href="#">Contato</a></li>
       </ul>
     </nav>
   </header>
+
+  
+  <!-- Navegação mobile -->
+  <nav class="menu-responsivo">
+    <div class="separando-logos">
+      <figure class="logo">
+        <img src="assets/images/logo-havana.png" alt="Logo Gelateria Havana">
+      </figure>
+      <div class="menu" id="icon-menu"><i class="fas fa-bars"></i></div>
+    </div>
+
+    <div class="navegacao-responsivo" id="links-nav">
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li>
+          <div class="dropdown">
+            <button class="dropbtn" id="btndrop-mobile">
+              Cardápio <i class="fa fa-caret-down"></i>
+            </button>
+            <nav id="dropdown-mobile" class="dropdown-content">
+              <a href="assets/paginas/gelatos.html">Gelatos</a>
+              <a href="assets/paginas/picoles.html">Picolés</a>
+              <a href="assets/paginas/paletas.html">Palletas</a>
+              <a href="assets/paginas/outros.html">Outros</a>
+            </nav>
+          </div>
+        </li>
+        <li><a href="/index.html">Sobre</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </div>
+  </nav>
 
 
 <section class="formulario">
