--- a/assets/paginas/gelatos.html
+++ b/assets/paginas/gelatos.html
@@ -595,7 +595,7 @@
   
 <!------------------------------>
 
-<<footer>
+<footer>
     <div class="footer-container">
     <div class="footer-logo">
       <img src="assets/images/logo-havana.png" alt="Logo Gelateria Havana">
