--- a/assets/paginas/contato.html
+++ b/assets/paginas/contato.html
@@ -43,14 +43,14 @@
   <nav class="menu-responsivo">
     <div class="separando-logos">
       <figure class="logo">
-        <img src="assets/images/logo-havana.png" alt="Logo Gelateria Havana">
+        <img src="/assets/images/logo-havana.png" alt="Logo Gelateria Havana">
       </figure>
       <div class="menu" id="icon-menu"><i class="fas fa-bars"></i></div>
     </div>
 
     <div class="navegacao-responsivo" id="links-nav">
       <ul>
-        <li><a href="index.html">Início</a></li>
+        <li><a href="../../index.html">Início</a></li>
         <li>
           <div class="dropdown">
             <button class="dropbtn" id="btndrop-mobile">
@@ -81,7 +81,7 @@
    <label for="Nome">Nome</label><br>
    <input type="text" id="nome" name="nome"> <br>
 
-    <label for="tel">Telefone</label> <br>
+    <!-- <label for="tel">Telefone</label> <br> -->
    <input type="tel" id="tel" name="tel"> <br>
 
     <label for="email">E-mail</label> <br>
@@ -95,7 +95,7 @@
 </div>
 
 
-<div class="form2">
+<!-- <div class="form2">
    
     <h2>Envie seu currículo</h2>
     <p class="texto">Valorizamos o crescimento sustentável, o desempenho profissional e a promoção da diversidade. Venha fazer parte da família Havana!</p>
@@ -110,18 +110,12 @@
     <label for="email">E-mail</label> <br>
    <input type="email" id="email" name="emal"> <br>
 
-    <label for="cidade">Cidade</label> <br>
-   <input type="text" id="cidade" name="cidade" required> <br>
-
-     <label for="setor">Setor de interesse</label> <br>
-   <input type="text" id="setor" name="setor"> <br>
-
     <label for="curriculo">Envie seu currículo</label> <br>
    <input type="file" id="curriculo" name="curriculo" required> <br>
 
    <input type="submit" name="enviar" id="enviar"  class="botao">
 </form>
-</div>
+</div> -->
 </section>
 
 <div class="contato-icons">
@@ -159,32 +153,31 @@
 
 
 <footer>
-    <div class="footer-container">
-    <div class="footer-logo">
-      <img src="assets/images/logo-havana.png" alt="Logo Gelateria Havana">
-    </div>
-    
-    <div class="footer-section">
-      <ul>
-        <li><a href="/index.html">Página Inicial</a></li>
-        <li><a href="/assets/paginas/gelatos.html">Gelatos e mais</a></li>
-        <li><a href="/index.html#sobre">Sobre Nós</a></li>
-        <li><a href="/assets/paginas/contato.html">Contato</a></li>
-        <li><a href="/assets/paginas/contato.html">Trabalhe Conosco</a></li>
-      </ul>
-    </div>
+  <div class="footer-container">
+  <div class="footer-logo">
+    <img src="/assets/images/logo-havana.png" alt="Logo Gelateria Havana">
+  </div>
+  
+  <div class="footer-section">
+    <ul>
+      <li><a href="/index.html">Página Inicial</a></li>
+      <li><a href="/assets/paginas/gelatos.html">Gelatos e mais</a></li>
+      <li><a href="/index.html#sobre">Sobre Nós</a></li>
+      <li><a href="/assets/paginas/contato.html">Contato</a></li>
+      <li><a href="/assets/paginas/contato.html">Trabalhe Conosco</a></li>
+    </ul>
+  </div>
 
-    <div class="footer-section">
-      <ul class="#">
-        <li><a href="">Produtos Artesanais</a></li>
-        <li><a href="/assets/paginas/gelatos.html">Gelatos</a></li>
-        <li><a href="/assets/paginas/picoles.html">Picolés</a></li>
-        <li><a href="">Diet</a></li>
-        <li><a href="#">Sobremesa</a></li>
-        <li><a href="#">Para Viagem</a></li>
-      </ul>
-    </div>
-    
+  <div class="footer-section">
+    <ul class="#">
+      <li><a href="">Produtos Artesanais</a></li>
+      <li><a href="/assets/paginas/gelatos.html">Gelatos</a></li>
+      <li><a href="/assets/paginas/picoles.html">Picolés</a></li>
+      <li><a href="">Diet</a></li>
+      <li><a href="#">Sobremesa</a></li>
+      <li><a href="#">Para Viagem</a></li>
+    </ul>
+  </div>
   <section class="#">
     <h4>Horário:</h4>
     <p><em>Segunda a Domingo<br>das 13h às 23h</em></p>
@@ -197,19 +190,18 @@
   </section>
 
   <section class="footer-social">
-    <a href="https://www.instagram.com/gelateriahavana/" target="_blank">
-      <img src="../images/icone-instagram.png" alt="clique para acessar nosso Instagram em uma nova aba">
-    </a>
-    <a href="mailto:Contato@gelateriahavana.com.br">
-      <img src="../images/icone-email.png" alt="clique para nos enviar um e-mail">
-    </a>
-    <a href="https://wa.me/+5513981739220">
-      <img src="../images/icone-tel.png" alt="Clique para saber nosso whatsapp">
-    </a>
-  </section>
+  <a href="https://www.instagram.com/gelateriahavana/" target="_blank">
+    <img src="/assets/images/icone-instagram.png" alt="clique para acessar nosso Instagram em uma nova aba">
+  </a>
+  <a href="mailto:Contato@gelateriahavana.com.br">
+    <img src="/assets/images/icone-email.png" alt="clique para nos enviar um e-mail">
+  </a>
+  <a href="https://wa.me/+5513981739220">
+    <img src="/assets/images/icone-tel.png" alt="Clique para saber nosso whatsapp">
+  </a>
+</section>
   </div>    
 </footer>
-
 <script src="../JavaScript/script.js"></script>
 </body>
 </html>
