--- a/assets/paginas/outros.html
+++ b/assets/paginas/outros.html
@@ -95,7 +95,7 @@
       <div class="textos-produto">
           <figcaption>Banana Split</figcaption>
          <div class="tracinho"> </div>
-         <p class="descricao">Uma tradicional opção nas sorveterias do passado. Oferecemos aos amantes de sobremesas feitas com sorvetes.</p>
+         <p class="descricao">Uma tradicional e saborosa sobremesa.</p>
       </div>
     </figure>
 
@@ -153,7 +153,7 @@
     </figure>
 
     <figure class="produtos-img_fundo ">
-      <img src="../images/Gelato-diet.webp" alt="Imagem do gelato diet">
+      <img src="../images/Gelato-diet.webp" alt="Imagem do gelato diet" class="logo-footer">
           
       <div class="textos-produto">
          <figcaption>Diet</figcaption>
@@ -173,7 +173,7 @@
 <footer>
     <div class="footer-container">
     <div class="footer-logo">
-      <img src="assets/images/logo-havana.png" alt="Logo Gelateria Havana">
+      <img src="assets/images/logo-havana.png"alt="Logo Gelateria Havana">
     </div>
     
     <div class="footer-section">
