--- a/assets/paginas/paletas.html
+++ b/assets/paginas/paletas.html
@@ -168,7 +168,7 @@
 <footer>
     <div class="footer-container">
     <div class="footer-logo">
-      <img src="assets/images/logo-havana.png" alt="Logo Gelateria Havana">
+      <img src="assets/images/logo-havana.png" alt="Logo Gelateria Havana" class="logo-footer">
     </div>
     
     <div class="footer-section">
