--- a/assets/paginas/picoles.html
+++ b/assets/paginas/picoles.html
@@ -232,7 +232,7 @@
 <footer>
     <div class="footer-container">
     <div class="footer-logo">
-      <img src="assets/images/logo-havana.png" alt="Logo Gelateria Havana">
+      <img src="assets/images/logo-havana.png"alt="Logo Gelateria Havana" class="logo-footer">
     </div>
     
     <div class="footer-section">
