--- a/assets/paginas/contato.html
+++ b/assets/paginas/contato.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/responsive.css">
-<link rel="stylesheet" href="../css/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/responsive.css">
+  <link rel="stylesheet" href="../css/styles.css">
 
 </head>
+
 <body>
-    <!-- Navbar desktop -->
+  <!-- Navbar desktop -->
   <header class="navbar">
     <figure class="logo">
       <img src="../images/logo-havana.png" alt="Logo Gelateria Havana">
@@ -25,7 +27,7 @@
               Cardápio <i class="fa fa-caret-down"></i>
             </button>
             <nav id="dropdown-desktop" class="dropdown-content">
-               <a href="../paginas/gelatos.html">Gelatos</a>
+              <a href="../paginas/gelatos.html">Gelatos</a>
               <a href="../paginas/picoles.html">Picolés</a>
               <a href="../paginas/paletas.html">Palletas</a>
               <a href="../paginas/outros.html">Outros</a>
@@ -38,7 +40,7 @@
     </nav>
   </header>
 
-  
+
   <!-- Navegação mobile -->
   <nav class="menu-responsivo">
     <div class="separando-logos">
@@ -71,137 +73,123 @@
   </nav>
 
 
-<section class="formulario">
-     <div class="form1">
-   <h1>Fale conosco</h1>
-   <p class="texto">Entre em contato. Deixe uma mensagem e ficaremos felizes em respondê-la.</p>
+  <section class="formulario">
+    <div class="form1">
+      <h1>Fale conosco</h1>
+      <p class="texto">Entre em contato. Deixe uma mensagem e ficaremos felizes em respondê-la.</p>
 
-   <section class="mensage">
-   <form action="https://formsubmit.co/assessoria.vivigomes@gmail.com" method="post"> 
-   <label for="Nome">Nome</label><br>
-   <input type="text" id="nome" name="nome"> <br>
+      <section class="mensage">
+        <form action="https://formsubmit.co/assessoria.vivigomes@gmail.com" method="post">
+          <label for="Nome">Nome</label><br>
+          <input type="text" id="nome" name="nome" required> <br>
 
-    <!-- <label for="tel">Telefone</label> <br> -->
-   <input type="tel" id="tel" name="tel"> <br>
+          <label for="tel">Telefone</label> <br>
+          <input type="tel" id="tel" name="tel" placeholder> <br>
 
-    <label for="email">E-mail</label> <br>
-   <input type="email" id="email" name="emal"> <br>
+          <label for="email">E-mail</label> <br>
+          <input type="email" id="email" name="emal" required> <br>
 
-    <label for="msg">Mensagem</label> <br>
-   <input type="text" id="msg" name="msg"> <br>
+          <label for="msg">Mensagem</label> <br>
+          <input type="text" id="msg" name="msg" required> <br>
 
-   <input type="submit" name="enviar" id="enviar" class="botao"> <br>
-</form>
-</div>
-
-
-<!-- <div class="form2">
-   
-    <h2>Envie seu currículo</h2>
-    <p class="texto">Valorizamos o crescimento sustentável, o desempenho profissional e a promoção da diversidade. Venha fazer parte da família Havana!</p>
-
-   <form action="https://formsubmit.co/Contato@gelateriahavana.com.br" method="post">
-   <label for="Nome">Nome</label> <br>
-   <input type="text" id="nome" name="nome"> <br>
-
-    <label for="tel">Telefone</label> <br>
-   <input type="tel" id="tel" name="tel"><br>
-
-    <label for="email">E-mail</label> <br>
-   <input type="email" id="email" name="emal"> <br>
-
-    <label for="curriculo">Envie seu currículo</label> <br>
-   <input type="file" id="curriculo" name="curriculo" required> <br>
-
-   <input type="submit" name="enviar" id="enviar"  class="botao">
-</form>
-</div> -->
-</section>
-
-<div class="contato-icons">
-  <a href="mailto:Contato@gelateriahavana.com.br" class="icone-contato" aria-label="Enviar email">
-    <div class="icone-bg">
-      <img src="/assets/images/icon-email - Copia.png" alt="Ícone de email">
+          <button class="botao">Enviar</button>
+        </form>
     </div>
-    <span>Email</span>
-  </a>
 
-  <a href="https://wa.me/+5513981739220" class="icone-contato" target="_blank" aria-label="Enviar mensagem pelo WhatsApp">
-    <div class="icone-bg">
-      <img src="/assets/images/icon-tel - Copia.png" alt="Ícone do WhatsApp">
-    </div>
-    <span>WhatsApp</span>
-  </a>
-
-  <a href="https://www.instagram.com/gelateriahavanapg?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="icone-contato" aria-label="Entre em contato pelo instagram">
-    <div class="icone-bg">
-      <img src="/assets/images/icon-instagram - Copia.png" alt="Ícone do Instagram">
-    </div>
-    <span>instagram</span>
-  </a>
-</div>
-
-
-
-<h3>Onde Estamos</h3>
-<p>Avenida Castelo Branco, 6920 – Ocian, Praia Grande – SP</p>
-
-<div class="mapa">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3644.129015843634!2d-46.46864582388523!3d-24.026515178847497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce1e599b180335%3A0x50d77fd10764599e!2sGelateria%20Havana!5e0!3m2!1spt-BR!2sbr!4v1748648084449!5m2!1spt-BR!2sbr" width="900" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
-<!------------------------------>
-
-
-<footer>
-  <div class="footer-container">
-  <div class="footer-logo">
-    <img src="/assets/images/logo-havana.png" alt="Logo Gelateria Havana">
-  </div>
-  
-  <div class="footer-section">
-    <ul>
-      <li><a href="/index.html">Página Inicial</a></li>
-      <li><a href="/assets/paginas/gelatos.html">Gelatos e mais</a></li>
-      <li><a href="/index.html#sobre">Sobre Nós</a></li>
-      <li><a href="/assets/paginas/contato.html">Contato</a></li>
-      <li><a href="/assets/paginas/contato.html">Trabalhe Conosco</a></li>
-    </ul>
-  </div>
-
-  <div class="footer-section">
-    <ul class="#">
-      <li><a href="">Produtos Artesanais</a></li>
-      <li><a href="/assets/paginas/gelatos.html">Gelatos</a></li>
-      <li><a href="/assets/paginas/picoles.html">Picolés</a></li>
-      <li><a href="">Diet</a></li>
-      <li><a href="#">Sobremesa</a></li>
-      <li><a href="#">Para Viagem</a></li>
-    </ul>
-  </div>
-  <section class="#">
-    <h4>Horário:</h4>
-    <p><em>Segunda a Domingo<br>das 13h às 23h</em></p>
-    <p class="small-text"><em>(sujeito a alteração)</em><br><em>Verifique nossas Redes Sociais</em></p>
   </section>
 
-  <section class="footer-location">
-    <h4>Localização:</h4>
-    <p><a href="https://maps.app.goo.gl/PGwLfbmZigVDXxCN8" target="_blank" alt="Clique para acessar o google maps da Gelateria">Avenida Pres. Castelo Branco, 6920  Cidade Ocian, Praia Grande SP</p></a>
-  </section>
+  <div class="contato-icons">
+    <a href="mailto:Contato@gelateriahavana.com.br" class="icone-contato" aria-label="Enviar email">
+      <div class="icone-bg">
+        <img src="/assets/images/icon-email - Copia.png" alt="Ícone de email">
+      </div>
+      <span>Email</span>
+    </a>
 
-  <section class="footer-social">
-  <a href="https://www.instagram.com/gelateriahavana/" target="_blank">
-    <img src="/assets/images/icone-instagram.png" alt="clique para acessar nosso Instagram em uma nova aba">
-  </a>
-  <a href="mailto:Contato@gelateriahavana.com.br">
-    <img src="/assets/images/icone-email.png" alt="clique para nos enviar um e-mail">
-  </a>
-  <a href="https://wa.me/+5513981739220">
-    <img src="/assets/images/icone-tel.png" alt="Clique para saber nosso whatsapp">
-  </a>
-</section>
-  </div>    
-</footer>
-<script src="../JavaScript/script.js"></script>
+    <a href="https://wa.me/+5513981739220" class="icone-contato" target="_blank"
+      aria-label="Enviar mensagem pelo WhatsApp">
+      <div class="icone-bg">
+        <img src="/assets/images/icon-tel - Copia.png" alt="Ícone do WhatsApp">
+      </div>
+      <span>WhatsApp</span>
+    </a>
+
+    <a href="https://www.instagram.com/gelateriahavanapg?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+      class="icone-contato" aria-label="Entre em contato pelo instagram">
+      <div class="icone-bg">
+        <img src="/assets/images/icon-instagram - Copia.png" alt="Ícone do Instagram">
+      </div>
+      <span>instagram</span>
+    </a>
+  </div>
+
+
+
+  <h3>Onde Estamos</h3>
+  <p>Avenida Castelo Branco, 6920 – Ocian, Praia Grande – SP</p>
+
+  <div class="mapa">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3644.129015843634!2d-46.46864582388523!3d-24.026515178847497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce1e599b180335%3A0x50d77fd10764599e!2sGelateria%20Havana!5e0!3m2!1spt-BR!2sbr!4v1748648084449!5m2!1spt-BR!2sbr"
+      width="900" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+  <!------------------------------>
+
+
+  <footer>
+    <div class="footer-container">
+      <div class="footer-logo">
+        <img src="/assets/images/logo-havana.png" alt="Logo Gelateria Havana">
+      </div>
+
+      <div class="footer-section">
+        <ul>
+          <li><a href="/index.html">Página Inicial</a></li>
+          <li><a href="/assets/paginas/gelatos.html">Gelatos e mais</a></li>
+          <li><a href="/index.html#sobre">Sobre Nós</a></li>
+          <li><a href="/assets/paginas/contato.html">Contato</a></li>
+          <li><a href="/assets/paginas/contato.html">Trabalhe Conosco</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <ul class="#">
+          <li><a href="">Produtos Artesanais</a></li>
+          <li><a href="/assets/paginas/gelatos.html">Gelatos</a></li>
+          <li><a href="/assets/paginas/picoles.html">Picolés</a></li>
+          <li><a href="">Diet</a></li>
+          <li><a href="#">Sobremesa</a></li>
+          <li><a href="#">Para Viagem</a></li>
+        </ul>
+      </div>
+      <section class="#">
+        <h4>Horário:</h4>
+        <p><em>Segunda a Domingo<br>das 13h às 23h</em></p>
+        <p class="small-text"><em>(sujeito a alteração)</em><br><em>Verifique nossas Redes Sociais</em></p>
+      </section>
+
+      <section class="footer-location">
+        <h4>Localização:</h4>
+        <p><a href="https://maps.app.goo.gl/PGwLfbmZigVDXxCN8" target="_blank"
+            alt="Clique para acessar o google maps da Gelateria">Avenida Pres. Castelo Branco, 6920 Cidade Ocian, Praia
+            Grande SP</p></a>
+      </section>
+
+      <section class="footer-social">
+        <a href="https://www.instagram.com/gelateriahavana/" target="_blank">
+          <img src="/assets/images/icone-instagram.png" alt="clique para acessar nosso Instagram em uma nova aba">
+        </a>
+        <a href="mailto:Contato@gelateriahavana.com.br">
+          <img src="/assets/images/icone-email.png" alt="clique para nos enviar um e-mail">
+        </a>
+        <a href="https://wa.me/+5513981739220">
+          <img src="/assets/images/icone-tel.png" alt="Clique para saber nosso whatsapp">
+        </a>
+      </section>
+    </div>
+  </footer>
+  <script src="../JavaScript/script.js"></script>
 </body>
+
 </html>
